<resources>
    <string name="app_name">LibrarySystem-Android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>@mipmap/ic_launcher

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="newlibraryitem_barcode_hint">Item barcode</string>
    <string name="newlibraryitem_title_hint">Item title</string>
    <string name="newlibraryitem_type_hint">Item type</string>
    <string name="newlibraryitem_isreservable_hint">Is reservable</string>
    <string name="newlibraryitem_isreserved_hint">Is reserved</string>
    <string name="newlibraryitem_loanperiod_hint">Loan period</string>
    <string name="newlibraryitem_button">Add Library Item</string>

    <string name="openingHour_day_hint">Day of the Week"</string>
    <string name="openingHour_start_hint">Start Time "HH:mm:ss"</string>
    <string name="openingHour_end_hint">End Time "HH:mm:ss"</string>
    <string name="openingHour_button">Add Opening Hours"</string>
    <string name="deletlibraryitem">deletlibraryitem</string>
</resources>