<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <fragment
        android:id="@+id/nav_host_fragment_content_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/nav_graph" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/error"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:text=""
            android:textColor="#FF0000"/>

        <EditText
            android:id="@+id/newlibraryitem_barcode"
            android:layout_width="593dp"
            android:layout_height="50dp"
            android:hint="@string/newlibraryitem_barcode_hint" />

        <EditText
            android:id="@+id/newlibraryitem_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/newlibraryitem_title_hint" />

        <EditText
            android:id="@+id/newlibraryitem_type"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/newlibraryitem_type_hint" />

        <EditText
            android:id="@+id/newlibraryitem_isreservable"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/newlibraryitem_isreservable_hint" />

        <EditText
            android:id="@+id/newlibraryitem_isreserved"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/newlibraryitem_isreserved_hint" />

        <EditText
            android:id="@+id/newlibraryitem_loanperiod"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/newlibraryitem_loanperiod_hint" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="addLibraryItem"
            android:text="@string/newlibraryitem_button" />

        <View
            android:layout_height="2dp"
            android:layout_width="fill_parent"
            android:background="#16552e"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Opening Hours"
            android:textColor="#000000"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <!--android:id="@+id/gotta pick an ID for it"-->
        <!--android:hint="@string/ GOTTA PICK AN IDENTIFIER FOR THE STRING "-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"/> <!-- Blank button -->
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>